methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^