methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  var k=false
  if (getCouleurSol()==Color.green){
    k=true 
    avance()
  	} else {
    gauche()
    avance()
  	}
}